--- a/week3/week3.html
+++ b/week3/week3.html
@@ -38,7 +38,7 @@
 
     <div class="container" id="seldefine-main">
         <div class="row text-center">
-            <div class="col-sm-12">
+            <div class="col-md-12">
                 <h1>Our menu</h1>
                 <div id="seldefine-content">
                 <h2>chicken</h2>
